2008-10-18 18:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog: Moved to here top level of project.
	* Documentation/ChangeLog: Removed from here...
	* Modules/Editors/ProjectCenter/PCEditor.m: Corrected an issue in the
	windowDidResignKey: method which was making the window the first
	responder.  This was preventing Find from working properly.

2008-02-20 Sergii Stoian <stoyan255@gmail.com>

        * Framework/PCProjectBuilder.m: 
	  (-parseErorLine:): Fixed type of saved row and column values.
	  Cleanup.
	* Framework/PCEditorManager.m: 
	  (-openEditorForFile:editable:windowed:): Fixed another NSLog 
	  parameter missing.

2008-02-19 Sergii Stoian <stoyan255@gmail.com>

        * PCMenuController.m: Start thinking about "Go to line:" popup.
        * English.lproj/ProjectCenter.gorm: Added "Edit->Find->Line Number..."
        menu item.
        * Framework/PCProjectBrowser.m: (-nameOfSelectedFile:): Improve
        category select detection.
        (-pathToSelectedFile:): Use nameOfSelctedFile:. Cleanup.
        (-nameOfSelctedCategory:): Return project name if subproject is
        selected.
        * Framework/PCProjectEditor.m:
        (-openEditorForCategoryPath:windowed:): Use PCEditor's
        fileStructureItemSelected if file structure component selected
        in browser.
        * Framework/PCProjectBuilder.m: Go to line number in editor
        on error/warning click functionality implemented.
        * Framework/PCProjectWindow.m: Cleanup.
        * Framework/PCPrefController.m: Fix some compiler warnings.
        * Modules/Parsers/ProjectCenter/ObjCMethodHandler.m:
        * Modules/Parsers/ProjectCenter/ObjCClassHandler.m:
        Fix bug #20855. Improve class names parsing: don't include spaces.
        * Modules/Editors/ProjectCenter/PCEditorView.h: Remove unused
        editorDocument variable.
        * Modules/Editors/ProjectCenter/PCEditor.h:
        * Modules/Editors/ProjectCenter/PCEditor.m: Make class independent