@@ -62,6 +62,6 @@
     }
   );
   URL = "See http://www.gnustep.org/";
-  Copyright = "Copyright (C) 1999 - 2005 Free Software Foundation";
-  CopyrightDescription = "Released under the GNU General Public License 2.0";
+  Copyright = "Copyright (C) 1999 - 2008 Free Software Foundation";
+  CopyrightDescription = "Released under the GNU General Public License 3.0 or later";
 }
