@@ -1,3 +1,14 @@
+2008-10-22 Riccardo Mottola <rmottola@users.sf.net>
+
+	* English.lproj/Info.grom: correct bugtracker URL
+
+2008-10-22 Wolfgang Lux <wolfgang.lux@gmail.com>
+
+	* Framework/PCProjectBuilder.m: fix memory related crash
+	* Framework/PCProjectBuilder.m,
+	Modules/Projects/Application/PCAppProject.m,
+	Modules/Projects/Tool/PCToolProject.m: enhancements for relative install paths
+
 2008-10-18 18:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* ChangeLog: Moved to here top level of project.
